--- a/proyecto_duo/css/general.css
+++ b/proyecto_duo/css/general.css
@@ -1,3 +1,15 @@
+@import 'carrusel.css';
+@import 'contacto.css';
+
+:root{
+  --night: #121212;
+  --green-erin: #0EEF53;
+  --platinum: #DDDDDD;
+  --light-blue: #B9EDDD;
+  --tiffany-blue: #87CBB9;
+  --slate-gray: #577D86;
+  }
+
 * {
   padding: 0;
   margin: 0;
@@ -51,7 +63,7 @@ header {
     top: 0;
     width: 4px;
     height: 100%;
-    background-color: #e1bee7;
+    background-color: #75e1ff;
     transform: scaleY(1);
     transition: all 0.5s;
     transform-origin: bottom;
@@ -63,7 +75,7 @@ header {
     top: 0;
     width: 4px;
     height: 100%;
-    background-color: #8e24aa;
+    background-color: #0052b6;
     transform: scaleY(0);
     transition: all 0.5s;
     transform-origin: bottom;
@@ -84,15 +96,17 @@ header {
   padding: 0;
   li {
     padding: 10px;
-    color: #8e24aa;
+    color: var(--green-erin);
     font-size: 19px;
   }
 }
 
 .buttons button:nth-child(1) {
-  border: 1px solid #8e24aa !important;
-  color: #8e24aa;
+  border: 1px solid var(--green-erin) !important;
+  color: var(--green-erin);
   height: 40px;
+  font-weight: bolder;
+  
 }
 
 .buttons button:nth-child(1):hover {
@@ -102,72 +116,4 @@ header {
   background-color: #8e24aa;
 }
 
-.buttons button:nth-child(2) {
-  border: 1px solid #8e24aa !important;
-  background-color: #8e24aa;
-  color: #fff;
-  height: 40px;
-}
 
-.contact-form {
-  background: #fff;
-  margin-top: 10%;
-  margin-bottom: 5%;
-  .contact-image {
-    text-align: center;
-    img {
-      border-radius: 6rem;
-      width: 11%;
-      margin-top: -3%;
-      transform: rotate(29deg);
-    }
-  }
-  @media (width > 768px){
-    width: 70%;
-  }
-  form {
-    padding: 1rem 0.6rem;
-    h3 {
-      text-align: center;
-      color: #0062cc;
-      margin-bottom: 1rem;
-    }
-    .row {
-      article {
-        .form-group {
-          .form-control {
-            border-radius: 0.5rem;
-          }
-          textarea {
-            resize: none;
-          }
-        }
-      }
-    }
-    .btnContainer {
-      .btnContact {
-        width: 50%;
-        margin-top: 1rem;
-        border: none;
-        border-radius: 0.4rem;
-        padding: 1.5%;
-        background: #dc3545;
-        font-weight: 600;
-        color: #fff;
-        cursor: pointer;
-      }
-    }
-    @media (width > 570px) {
-      /* padding: 5rem 3rem; */
-    }
-  }
-}
-.btnContactSubmit {
-  width: 50%;
-  border-radius: 1rem;
-  padding: 1.5%;
-  color: #fff;
-  background-color: #0062cc;
-  border: none;
-  cursor: pointer;
-}
