--- a/proyecto_duo/css/general.css
+++ b/proyecto_duo/css/general.css
@@ -8,6 +8,7 @@
   --light-blue: #B9EDDD;
   --tiffany-blue: #87CBB9;
   --slate-gray: #577D86;
+  --gradiant: linear-gradient(90deg, #0072ff, #00c6ff);
   }
 
 * {
@@ -51,11 +52,19 @@ header {
 
 .card {
   border: none;
-
   position: relative;
   overflow: hidden;
   border-radius: 8px;
   cursor: pointer;
+  max-height: 500px;
+  height: 500px;
+  img{
+    max-height: 300px;
+    min-height: 300px;
+    height: 300px;
+    /* max-width: 232px; */
+    object-fit: cover;
+  }
   &::before {
     content: "";
     position: absolute;
@@ -114,6 +123,13 @@ header {
   color: #fff;
   height: 40px;
   background-color: #8e24aa;
+}
+
+.btn-categoria{
+  transition: all .3s;
+  &:hover{
+    transform: scale(1.1);
+  }
 }
 
 
