--- a/proyecto_duo/css/contacto.css
+++ b/proyecto_duo/css/contacto.css
@@ -41,7 +41,7 @@
           border: none;
           border-radius: 0.4rem;
           padding: 1.5%;
-          background: var(--gradiant);
+          background: var(--green-erin);
           font-weight: 600;
           color: #fff;
           cursor: pointer;
