--- a/proyecto_duo/css/general.css
+++ b/proyecto_duo/css/general.css
@@ -8,7 +8,6 @@
   --light-blue: #B9EDDD;
   --tiffany-blue: #87CBB9;
   --slate-gray: #577D86;
-  --gradiant: linear-gradient(90deg, #0072ff, #00c6ff);
   }
 
 * {
@@ -18,6 +17,7 @@
 }
 body {
   background: #eee;
+  padding: 10px;
   background: -webkit-linear-gradient(left, #0072ff, #00c6ff);
 }
 header {
@@ -51,19 +51,11 @@ header {
 
 .card {
   border: none;
+
   position: relative;
   overflow: hidden;
   border-radius: 8px;
   cursor: pointer;
-  max-height: 500px;
-  height: 500px;
-  img{
-    max-height: 300px;
-    min-height: 300px;
-    height: 300px;
-    /* max-width: 232px; */
-    object-fit: cover;
-  }
   &::before {
     content: "";
     position: absolute;
@@ -124,38 +116,4 @@ header {
   background-color: #8e24aa;
 }
 
-.btn-categoria{
-  transition: all .3s;
-  &:hover{
-    transform: scale(1.1);
-  }
-}
-
-.galeria{
-  height: 500px;
-  padding: 10px 0;
-  overflow: hidden;
-  .vista-previa{
-    border-radius: 1rem;
-    img{
-      filter: grayscale(100%);
-      transition: all .3s;
-      width: 100%;
-      max-width: 150px;
-      height: 100%;
-      object-fit: cover;
-      @media (width < 768px){
-        width: 100px;
-        aspect-ratio: 1/1;
-      }
-    }
-    img:hover{
-      filter: grayscale(0);
-    }
-  }
-  #carrusel-top{
-    height: 100%;
-    max-height: 500px;
-  }
-}
 
